# preks_backend

./: CHANGELOG.md  Procfile  README.md  example.prek  prekParser.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/f4fd02c0/: cabal_macros.h
app/: API.hs  BetterInterpreter.hs  CLParser.hs  Converter.hs  Lexer.hs  Main.hs  Parser.hs  ParserCon.hs  Testing.hs  Vector.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
