cabal-version:      2.4
name:               prekParser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Maximilian Hertenstein
maintainer:         max.hertenstein@gmx.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable prekParser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:   API
                    ,ParserCon
                    ,BetterInterpreter
                    ,Converter
                    ,Lexer
                    ,Parser
                    ,Vector
                    ,Testing
                    ,CLParser


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                      ,wai-cors ^>= 0.2.7
                      ,mtl ^>= 2.2.2
                      ,aeson ^>= 1.5.6.0
                      ,scotty ^>= 0.12
                      ,optparse-applicative
                      ,containers
                      ,unordered-containers
                      ,QuickCheck
    hs-source-dirs:   app
    default-language: Haskell2010
